# sandbox

./: LICENSE  README.md
.github/workflows/: ci.yaml
applications/model_trainer/: Makefile  mypy.ini  pyproject.toml  tox.ini
applications/model_trainer/tests/: test_common.py
applications/model_trainer/tests/factory/: conftest.py  test_dataset.py
applications/model_trainer/trainer/: common.py
applications/model_trainer/trainer/config/: train.yaml
applications/model_trainer/trainer/config/scheduler/: plateau.yaml
applications/model_trainer/trainer/factory/: lit.py
applications/model_trainer/trainer/factory/datasets/: __init__.py  cifar10.py  imagenet.py  imagenet1k.py
applications/model_trainer/trainer/schema/: __init__.py  arch.py  datamodule.py  env.py  scheduler.py
applications/model_trainer/trainer/scripts/: train.py
applications/sandbox/: .gitignore  mypy.ini  pyproject.toml  tox.ini
provision/environments/continuous_integration/: docker-compose.yaml
provision/environments/development/: Dockerfile-sandbox  Dockerfile-trainer  docker-compose.yaml
