[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = "Sandbox environment."
authors = ["gatheluck"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.9.0"
torchvision = "^0.10.0"
pandas = "^1.2.4"
hydra-core = "^1.1.0"
pytorch-lightning = "^1.3.6"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
mypy = "^0.902"
flake8 = "^3.9.2"
isort = "^5.8.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
